--- a/mobile_dev/pubspec.yaml
+++ b/mobile_dev/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.3.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_sign_in: ^6.2.1
+  googleapis: ^13.2.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.12 
+  pinput: ^4.0.0
+  http: ^1.2.1
+  flutter_secure_storage: ^9.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,9 +65,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
 assets:
-   - images/scattered_platic-bottles.jpg
-   - images/used-plastic-bottles.jpg
-   - images/trashcan-with-garbage.jpg
+  - images/image1.png
+  - images/image4.png
+  - images/image2.png
+  - images/image3.png
+  - images/google_pic.png
+  - images/sucess.png
+  - images/forgot_password_email.png
+  - images/forgot_password.png
+  - images/password_reset.png
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
