--- a/mobile_dev/pubspec.yaml
+++ b/mobile_dev/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   pinput: ^4.0.0
   http: ^1.2.1
   flutter_secure_storage: ^9.2.2
+  image_picker: ^1.0.7
+  url_launcher: ^6.3.0
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,16 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/image1.png
-    - assets/images/image4.png
-    - assets/images/image2.png
-    - assets/images/image3.png
-    - assets/images/google_pic.png
-    - assets/images/sucess.png
-    - assets/images/forgot_password_email.png
-    - assets/images/forgot_password.png
-    - assets/images/password_reset.png
-
+    - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
