--- a/mobile_dev/pubspec.yaml
+++ b/mobile_dev/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.0.7
   url_launcher: ^6.3.0
   intl: ^0.19.0
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
