Add sensitive files to gitignore

--- a/mobile_dev/.gitignore
+++ b/mobile_dev/.gitignore
@@ -48,6 +48,7 @@ app.*.map.json
 .env*
 *-local
 
+# Sensitive service/config files
 lib/services/api_service.dart
 lib/services/auth_service.dart
 lib/services/secure_storage_service.dart
